# phantom-lens

./: .gitignore  README.md  __init__.py  add_celebdf_fake.py  analyze_eda.py  analyze_ffpp.py  analyze_pca.py  analyze_tsne_iterations.py  analyze_tsne_perplexity.py  blend_boundary.py  build_v4_pkls.py  check_auc.py  dataset.py  diag_freq.py  diagnose.py  diagose.py  dockerfile  download.py  eval_crossdataset_v4.py  evaluate_v3_best.py  extract_celebdf_real.py  extract_v2_sequences.py  find_confound.py  freq_checkerboard.py  pillar1_noise.py  pillar2_light.py  pillar3_compression.py  pillar_new.py  precompute_fake_only.py  precompute_features.py  precompute_features_v2.py  precompute_features_v3.py  precompute_features_v4.py  prepare_celebvhq.py  prepare_deeper_fake_only.py  pyproject.toml  recompute_features_v4.py  recompute_v3_base.py  requirements.txt  requirements_best.txt  (+12 more)
config/: __init__.py  datasets.py  training.py
data_prep/: analyze_v4_pkl.py  create_samples.py  inspect_pkl.py  prepare_celebdf.py  prepare_celebvhq_v2.py  prepare_data.py  prepare_deeperforensics.py  prepare_dffd.py  prepare_ffpp.py  prepare_ffpp_official.py  prepare_wilddeepfake.py  prepare_wilddeepfake_v2.py
evaluation/: check_auc.py  check_confound.py  check_confound2.py  cross_dataset_eval.py  cross_dataset_ttn.py  eval_crossdataset_v3.py  eval_phase1_ttn.py  safety_check.py
experiments/: test_no_codec_norm.py
results/: audit_report.md  build_report.py  final_report.md  final_results.csv  generate_final_pdf.py  generate_final_report.py  run_corrected_experiments.py
(+59 files in other folders)
